--- a/SecureMailApp/SecureMailApp.csproj
+++ b/SecureMailApp/SecureMailApp.csproj
@@ -25,6 +25,10 @@
     <PackageReference Include="System.Drawing.Common" Version="4.5.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Storage\" />
+  </ItemGroup>
+
 
 
 </Project>
